apps/adguard/base/ingress.yaml
---
# Normal path rewrite
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: admin
  annotations:
    external-dns.alpha.kubernetes.io/target: amolicob.cloud
spec:
  entryPoints: []
  routes:
    - kind: Rule
      match: Host(`blackhole.amolicob.cloud`)
      priority: 0
      services:
        - kind: Service
          name: admin
          namespace: adguard
          port: admin
  tls:
    secretName: adguard-admin
